--- a/frontend/todo-app/src/App.css
+++ b/frontend/todo-app/src/App.css
@@ -4,8 +4,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-body{
-    font-family: 'Josefin Sans', sans-serif;
+body {
+  font-family: "Josefin Sans", sans-serif;
 }
